[gd_scene load_steps=14 format=3 uid="uid://c202p7gkg6eq3"]

[ext_resource type="Script" path="res://Enemies/animal.gd" id="1_va5an"]
[ext_resource type="PackedScene" uid="uid://dxwj7thyxjsco" path="res://Imports/Boar/scene.gltf" id="2_mhc3e"]
[ext_resource type="PackedScene" uid="uid://cs4pdnl4db0o1" path="res://Colliders/hurt_box.tscn" id="3_e270g"]
[ext_resource type="PackedScene" uid="uid://dv0jq3pemcjyr" path="res://Colliders/hit_box.tscn" id="4_tm1s7"]
[ext_resource type="PackedScene" uid="uid://btfydm00tpmrs" path="res://Scenes/stats.tscn" id="5_l50sa"]
[ext_resource type="AudioStream" uid="uid://03hb7bxqqs57" path="res://Audio/SFXs/Enemies/animal_hit.wav" id="6_4vrv0"]
[ext_resource type="AudioStream" uid="uid://divr20wnocaaw" path="res://Audio/SFXs/Enemies/boar_sound.wav" id="6_qjbqf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mj6s5"]
size = Vector3(0.627472, 1.43604, 2.37817)

[sub_resource type="BoxShape3D" id="BoxShape3D_ied14"]
size = Vector3(0.680322, 2.4, 1.20116)

[sub_resource type="BoxShape3D" id="BoxShape3D_ht4lu"]
size = Vector3(0.792358, 1.29601, 2.46533)

[sub_resource type="Animation" id="Animation_sgfcj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Mesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlashPivot/FlashMesh:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_awhu0"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Mesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlashPivot/FlashMesh:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5fwh5"]
_data = {
"RESET": SubResource("Animation_sgfcj"),
"flash": SubResource("Animation_awhu0")
}

[node name="Boar" type="CharacterBody3D" node_paths=PackedStringArray("flash_animation_player", "stats", "animal_sound_effect")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_va5an")
SPEED = 150
flash_animation_player = NodePath("FlashAnimationPlayer")
stats = NodePath("Stats")
animal_sound_effect = NodePath("BoarSound")

[node name="Pivot" type="Marker3D" parent="."]
transform = Transform3D(0.363607, 0, -0.655965, 0, 0.75, 0, 0.655965, 0, 0.363607, 0, 0.3, 0)

[node name="Mesh" parent="Pivot" instance=ExtResource("2_mhc3e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1.1, -3.7)

[node name="FlashPivot" type="Marker3D" parent="."]
transform = Transform3D(0.242405, 0, -0.43731, 0, 0.5, 0, 0.43731, 0, 0.242405, 0, 0.3, 0)

[node name="FlashMesh" parent="FlashPivot" instance=ExtResource("2_mhc3e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1.1, -3.7)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00279236, 0.106201, 0.26062)
visible = false
shape = SubResource("BoxShape3D_mj6s5")

[node name="HurtBox" parent="." instance=ExtResource("3_e270g")]
visible = false
collision_layer = 16
collision_mask = 2080
damage = 1.0

[node name="CollisionShape3D" parent="HurtBox" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.00252682, 0.138092, 0.247421)
shape = SubResource("BoxShape3D_ied14")

[node name="HitBox" parent="." instance=ExtResource("4_tm1s7")]
collision_layer = 2056
collision_mask = 272
damage = 1.0

[node name="CollisionShape3D" parent="HitBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00669245, 0.129136, 0.254374)
shape = SubResource("BoxShape3D_ht4lu")

[node name="Stats" parent="." instance=ExtResource("5_l50sa")]
max_health = 5.0

[node name="FlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5fwh5")
}

[node name="BoarSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qjbqf")
volume_db = -5.0
pitch_scale = 0.75
autoplay = true
bus = &"Sound Effects"

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4vrv0")
bus = &"Sound Effects"

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="HurtBox"]
[editable path="HitBox"]
